<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/welcome_to_nyour_app_name"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/guid1"
        app:layout_constraintHorizontal_bias="0.2"
        android:fontFamily="@font/allerta"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card2"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid1"
        app:layout_constraintHeight_percent="0.09">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp"
            android:hint="@string/ismingizni_kiriting"
            android:textColor="@color/def1"
            android:background="@color/def3"
            android:fontFamily="@font/allerta"
            android:textColorHint="@color/def1"
            android:padding="10dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guid2"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintHeight_percent="0.09">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp"
            android:hint="@string/username_kiriting"
            android:textColor="@color/def1"
            android:fontFamily="@font/allerta"
            android:background="@color/def3"
            android:textColorHint="@color/def1"
            android:padding="10dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/guid3"
        android:background="@color/null_color"
        android:backgroundTint="@color/null_color"
        app:cardElevation="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid2"
        app:layout_constraintHeight_percent="0.19">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/null_color"
            android:layout_height="match_parent">


            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/liner1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_student"
                app:layout_constraintRight_toLeftOf="@id/liner2"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:background="@drawable/back_item"
                android:padding="4dp"
                app:layout_constraintWidth_percent="0.45">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_oquvchi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@color/null_color"
                    app:cardCornerRadius="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/null_color"
                        android:src="@drawable/pupil_images"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:visibility="invisible"
                android:id="@+id/txt_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="18sp"
                android:fontFamily="@font/allerta"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/liner1"
                app:layout_constraintRight_toRightOf="@id/liner1"
                app:layout_constraintTop_toBottomOf="@id/liner1" />

            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/liner2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_student"
                app:layout_constraintLeft_toRightOf="@id/liner1"
                android:padding="4dp"
                app:layout_constraintWidth_percent="0.45">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_oqituvchi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@color/null_color"
                    app:cardCornerRadius="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/null_color"
                        android:padding="10dp"
                        android:src="@drawable/teacher_images"/>

                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <TextView
                android:visibility="invisible"
                android:id="@+id/txt_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textSize="18sp"
                android:fontFamily="@font/allerta"
                android:textColor="@color/def"
                app:layout_constraintTop_toBottomOf="@id/liner2"
                app:layout_constraintLeft_toLeftOf="@id/liner2"
                app:layout_constraintRight_toRightOf="@id/liner2"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:visibility="invisible"
        android:id="@+id/txt_fanlar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/card4"
        app:layout_constraintLeft_toLeftOf="@id/card4"
        app:layout_constraintRight_toRightOf="@id/card4"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/faningizni_tanlang"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/allerta"
        android:layout_marginBottom="2dp"/>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guid4"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid3"
        app:layout_constraintHeight_percent="0.09">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:entries="@array/viloyat_array"
            android:background="@color/def3"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/card5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/def1"
        app:cardElevation="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid4"
        app:layout_constraintHeight_percent="0.08">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:fontFamily="@font/allerta"
                android:textColor="@color/white"
                android:textSize="24sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>